# watson

./: CLAUDE.md  Watson.lean  lake-manifest.json  lakefile.toml
watson/: Cargo.toml
watson/src/: config.rs  context.rs  diagnostics.rs  main.rs  parser.rs  report.rs  span.rs  statements.rs  strings.rs  util.rs
watson/src/book/: mod.rs  server.rs
watson/src/book/templates/: auto_reload.js  chapter.html  chapter_header.html  chapter_section.html  chapter_subsection.html  layout.html  section_header.html  styles.css  subsection_header.html
watson/src/cli/: book_command.rs  check_command.rs  mod.rs  new_command.rs
watson/src/context/: arena.rs  mod.rs
watson/src/diagnostics/: render.rs  specifics.rs
watson/src/parse/: axiom.rs  builtin.rs  common.rs  definition.rs  earley.rs  elaborator.rs  find_patterns.rs  grammar.rs  hypotheses.rs  location.rs  macros.rs  mod.rs  notation.rs  parse_state.rs  parse_tree.rs  parsing_rules.rs  pattern.rs  proof.rs  sentence.rs  source_cache.rs  stream.rs  syntax.rs  tactic.rs  templates.rs  term.rs  theorem.rs  utils.rs
watson/src/semant/: attributes.rs  check_circularity.rs  check_proof.rs  check_proofs.rs  commands.rs  formal_syntax.rs  fragment.rs  fragments.rs  mod.rs  notation.rs  parse_fragment.rs  presentation.rs  proof_kernel.rs  proof_status.rs  render_proof_state.rs  scope.rs  tactic.rs  theorem.rs  theorems.rs  unresolved.rs
watson/src/semant/check_proofs/: mod.rs
watson/src/semant/custom_grammar/: inst.rs  manager.rs  mod.rs  syntax.rs
watson/src/semant/tactic/: mod.rs  (+4 more)
watson/src/static/: definitions.d.luau
(+51 files in other folders)
