[package]
name = "watson"
version = "0.1.0"
edition = "2024"

[dependencies]
aho-corasick = "1.1.4"
annotate-snippets = "0.11.5"
argh = "0.1.13"
convert_case = "0.10.0"
crossterm = "0.29.0"
im = "15.1.0"
itertools = "0.14.0"
line-span = "0.1.5"
mlua = { version = "0.11.5", features = ["luau", "macros"] }
notify = "8.2.0"
rustc-hash = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
slotmap = "1.0.7"
toml = "0.8"
typed-arena = "2.0.2"
ustr = "1.1.0"
